web_server/style.css
* {
    margin: 0px;
    padding: 0px;
    box-sizing: border-box;
}

body {
    width: 100rem;
    margin: 0px auto;
    font-family: Arial, Helvetica, sans-serif;
}

section {
    width: 100%;
    padding: 1.5rem;
}

section h2 {
    color: #1b263b;
    font-size: x-large;
}

/* --------------------------------------------*/
/* --- HEADER ---------------------------------*/
/* --------------------------------------------*/

header {
    display: flex;
    justify-content: space-between;
    padding: 3rem 0.5rem 3rem 1.5rem;
    background-color: #1b263b;
}

header h1 {
    color: #e0e1dd;
}

nav ul {
    display: inline;
}

nav ul li {
    list-style-type: none;
    float: left;
    padding: 1rem;
    font-size: large;
}

nav a {
    color: #e0e1dd;
    text-decoration: none;
}

nav ul li:hover {
    border-bottom: #e0e1dd solid 0.2rem;
    padding-bottom: 0.8rem;
}

/* --------------------------------------------*/
/* --- FORM -----------------------------------*/
/* --------------------------------------------*/

button {
    cursor: pointer;
    padding: 4px;
    border: 1px solid gray;
    background: #fff;
    margin: 1px;
}

input {
    border: none;
    field-sizing: content;
}

select {
    border: none;
    background: rgba(0, 0, 0, 0);
}

#plan-date {
    display: inline-block;
    padding: 0.5rem;
    margin: 1rem 0;
    background-color: #f1f1f1;
}

tr:nth-child(even) {
    background-color: #bfdbf7;
}

tr:nth-child(even) input{
    background-color: #bfdbf7;
}

#targets-table th,
#targets-table td {
    padding: 0.5rem;
}

.filter-btn {
    padding: 6px 16px;
    margin-right: 5px;
    cursor: pointer;
}

.filter-btn.active {
    font-weight: bold;
    background-color: #778da9;
    color: white;
    border-color: #778da9;
}

#form {
    display: grid;
    grid-template-columns: repeat(2, minmax(0, 1fr));
    column-gap: 1.5rem;
}

#targets-table {
    width:100%; 
    border: 1px solid #ccc; 
    border-collapse: collapse;
}

#targets-table thead {
    background: #f0f0f0;
    text-align: left;
}

#targets-table tr td:nth-child(3), #targets-table tr th:nth-child(3) {
    text-align: center;
}

.buttons button {
    background-color: #e0e1dd;
    padding: .7rem 1rem;
    margin: .5rem 0;
    text-align: center;
    cursor: pointer;
    color: #1b263b;
    border: .15rem solid #1b263b;
    width: 11rem;
    border-radius: 0.3rem;
}

.buttons button:hover {
    background-color: #f1f1f1;
    color: #1b263b;
    border: .15rem solid #415a77;
    padding: .6rem 0rem;
}

button[type="submit"] {
    color: #e0e1dd;
    background-color: #1b263b;
    font-weight: bold;
    margin: .5rem;
}

.buttons {
    width: 100%;
    display: flex;
    flex-direction: row;
}

#form img {
    width: 90%;
}

/* --------------------------------------------*/
/* --- VISIBILITY -----------------------------*/
/* --------------------------------------------*/

#visibility {
    display: none;
}

#visibility p {
    font-size: large;
    color: #1b263b;
}

#windows-list {
    display: grid;
    gap: 1rem;
    grid-template-columns: auto auto;
}

#visibility ul li {
    list-style-type: none;
    padding: 1.5rem;
    border-radius: 1rem;
    background-color: #f1f1f1;
    margin: 0;
}

#visibility ul button {
    background-color: #e0e1dd;
    padding: .7rem 1rem;
    margin: .5rem 0 0 0;
    text-align: center;
    cursor: pointer;
    color: #1b263b;
    border: .15rem solid #1b263b;
    border-radius: 0.3rem;
}

#visibility ul button:hover {
    background-color: #f1f1f1;
    color: #1b263b;
    border: .15rem solid #415a77;
}

/*slider from https://medium.com/@predragdavidovic10/native-dual-range-slider-html-css-javascript-91e778134816*/


.range_container {
    display: flex;
    flex-direction: column;
}

.sliders_control {
    position: relative;
    padding: 1rem 0;
}

.form_control {
    position: relative;
    display: flex;
    justify-content: space-between;
    font-size: 24px;
    color: #635a5a;
    padding: 0 1rem;
}

input[type="range"]::-webkit-slider-thumb {
    -webkit-appearance: none;
    pointer-events: all;
    width: 24px;
    height: 24px;
    background-color: #fff;
    border-radius: 50%;
    box-shadow: 0 0 0 1px #c6c6c6;
    cursor: pointer;
}

input[type="range"]::-moz-range-thumb {
    pointer-events: all;
    width: 24px;
    height: 24px;
    background-color: #fff;
    border-radius: 50%;
    box-shadow: 0 0 0 1px #c6c6c6;
    cursor: pointer;
}

input[type="range"]::-webkit-slider-thumb:hover {
    background: #f7f7f7;
}

input[type="range"]::-webkit-slider-thumb:active {
    box-shadow:
        inset 0 0 3px #387bbe,
        0 0 9px #387bbe;
    -webkit-box-shadow:
        inset 0 0 3px #387bbe,
        0 0 9px #387bbe;
}

.form_control_container__time__input {
    color: #8a8383;
    min-width: 60px;
    width: auto;
    height: 30px;
    font-size: 20px;
    border: none;
    background-color: transparent;
}

input[type="text"]::-webkit-inner-spin-button,
input[type="text"]::-webkit-outer-spin-button {
    opacity: 1;
}

input[type="range"] {
    -webkit-appearance: none;
    appearance: none;
    height: 2px;
    width: 100%;
    position: absolute;
    background: none;
    pointer-events: none;
}

.fromSlider {
    height: 0;
    z-index: 1;
}

.graph {
    margin: 1rem 0;
    border: 1px solid black;
    width: 100%;
}

/* --------------------------------------------*/
/* --- OBSERVATIONS ---------------------------*/
/* --------------------------------------------*/

#observations {
    background-color: #e0e1dd;
}

#observations table {
    width:100%; 
    border-collapse: collapse;
    border: #1b263b solid .1rem;
    background-color: #f0f0f0;
}

#observations table th {
    text-align: left;
    color: #e0e1dd;
}

#observations table thead {
    background-color: #415a77;
}

#observations table td, #observations table th {
    padding: .3rem;
}

/* --------------------------------------------*/
/* --- HISTORY --------------------------------*/
/* --------------------------------------------*/

#history table {
    width:100%; 
    border-collapse: collapse;
    border: #1b263b solid .1rem;
    background-color: #f0f0f0;
}

#history table th {
    text-align: left;
    color: #e0e1dd;
}

#history table thead {
    background-color: #415a77;
}

#history table td, #history table th {
    padding: .3rem;
}

.filter-btn {
    padding: 6px 16px;
    margin-right: 5px;
    cursor: pointer;
    border: 1px solid #ccc;
    background: #fff;
}

.filter-btn.active {
    font-weight: bold;
    background-color: #415a77;
    color: white;
    border-color: #415a77;
}

#pagination-controls {
    padding: 0.5rem 0;
}

#pagination-controls button {
    padding: 0.5rem;
}

#pagination-controls button:hover {
    border-color: #1b263b;
}

/* --------------------------------------------*/
/* --- CURRENT --------------------------------*/
/* --------------------------------------------*/

.image-container {
    display: flex;
    justify-content: center;
    gap: 1rem;
}

.image-container img {
    width: 50%;
    border: 1px solid #415a77;
}

.dashboard-panel {
    background: #bfdbf7;
    border: 1px solid #415a77;
    border-radius: 8px;
    padding: 0.5rem;
    margin-bottom: 1rem;
    width: fit-content; 
}

.target-details {
    list-style-type: none;
    padding: 0;
    margin: 10px 0 0 0;
    display: flex;
    gap: 1.5rem;
}

.target-details li {
    white-space: nowrap; 
}

